Added default username password

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ $ php artisan serve
 {% endhighlight %}
 
   <p>Open <code>http://localhost:8000/</code></p>
+  <p><strong>Default Username/Password:</strong> admin@example.com / password</p>
 
   <h3 id="angular_generators">Angular Generators</h3>
   <p>In order to get the right menu automatically generated you must respect some conventions.</p>
