changed form "title" to an h3 to stay in line with the other forms like forgot password

--- a/angular/app/pages/register/register.page.html
+++ b/angular/app/pages/register/register.page.html
@@ -5,7 +5,13 @@
     <div class="register-box-body">
         <div class="row">
             <div class="col-xs-12">
-                <p class="login-box-msg">Create a new account</p>
+                <div class="text-center">
+                    <h3>Create a new account</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
                 <register-form></register-form>
             </div>
         </div>
